# pyreadline

./: AGENTS.md  README.rst  eggsetup.py  pyproject.toml  setup.py
.github/workflows/: build.yml  python-tests.yml
doc/source/: changelog.rst  conf.py
pyreadline/: py3k_compat.py
