 [project]
 name = "pyreadline"
 version = "2.2.1"
 description = "A python implementation of GNU readline functionality, based on the ctypes-based UNC readline package by Gary Bishop"
 readme = "README.rst"
requires-python = ">=3.9,<4.0"
 license = {text = "BSD-3-Clause"}
 authors = [
     {name = "Jörgen Stenarson", email = "jorgen.stenarson@bostream.nu"},
     {name = "Gary Bishop", email = "gb@cs.unc.edu"},
     {name = "Jack Trainor"},
     {name = "Takayuki Shimizukawa", email = "shimizukawa@gmail.com"},
     {name = "DJ Magar", email = "admin@stomp.zone"},
 ]
 maintainers = [
     {name = "DJ Magar", email = "admin@stomp.zone"},
     {name = "Jörgen Stenarson", email = "jorgen.stenarson@bostream.nu"}
 ]
 classifiers = [
     "Development Status :: 6 - Mature",
     "Environment :: Console",
     "Operating System :: Microsoft :: Windows",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Terminals",
     "Topic :: Utilities"
 ]
dependencies = [
    "pywin32>=308,<=320",
]

 [project.urls]
 Homepage = "https://ipython.org/pyreadline"
 Repository = "https://github.com/djstompzone/pyreadline"

 [tool.poetry.group.dev.dependencies]
 # Sphinx 8.2 adds support for upcoming Python 3.13 releases
sphinx = ">=8.2.3"
tomli = {version = ">=2.0,<3", python = "<3.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
